Fix form input spacing.

--- a/.dev/assets/shared/css/woocommerce/forms.css
+++ b/.dev/assets/shared/css/woocommerce/forms.css
@@ -5,7 +5,7 @@
 */
 
 .woocommerce form .form-row {
-	margin: 0 0 3.75rem;
+	margin: 0 0 var(--theme-input--spacing);
 }
 
 .woocommerce form .form-row textarea,
